tooltips: Fix text overflowing.

--- a/web/styles/tooltips.css
+++ b/web/styles/tooltips.css
@@ -4,7 +4,7 @@
      * for tooltips here.
      */
     font-family: "Source Sans 3", sans-serif !important;
-    word-wrap: break-word;
+    overflow-wrap: anywhere;
     /* Contains stylistic variant of upper-case character "I" in Source Sans 3 */
     font-feature-settings: "ss01" on;
 
